--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,24 @@
 [workspace]
 resolver = "2"
 members = [ 
-	"crates/plugin",
-	"crates/kraken",
-	"crates/rp2gen"
+	"crates/tax",
+	"crates/ini",
 ]
 
 [workspace.dependencies]
-dt-plugin-kraken = { path = "./crates/kraken" }
-
+dungeon-ini = { path = "crates/ini" }
 anyhow = "1"
 csv = "1.3"
 clap = { version = "4.5", features = ["cargo", "env"] }
+chrono = { version = "0.4" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 serde_test = { version = "1" }
+toml = { version = "0.8" }
 thiserror = "1"
 tracing = "0.1"
 mockall = "0.12"
 trybuild = "1"
 tracing-subscriber = "0.3"
+indoc = "2"
+nom = "7"
