rp2gen import complete (todo output zip generation)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "rust-analyzer": {
+    "diagnostics": {
+      "disabled": "unlinked-file",
+      "experimental": {
+        "enable": true
+      }
+    },
     "cargo": {
       "features": "all",
       "buildScripts": { "enable": true }
