--- a/crates/kraken/Cargo.toml
+++ b/crates/kraken/Cargo.toml
@@ -8,6 +8,8 @@ dungeon-tax = { workspace = true }
 csv = { workspace = true }
 serde = { workspace = true }
 chrono = { workspace = true }
+thiserror = { workspace = true }
+tracing = { workspace = true }
 
 [dev-dependencies]
 indoc = { workspace = true }
