--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 resolver = "2"
 members = [ 
-	"crates/tax",
 	"crates/ini",
+	"crates/tax",
 	"crates/kraken",
+	"crates/rp2gen",
 ]
 
 [workspace.dependencies]
@@ -13,6 +14,8 @@ dungeon-kraken = { path = "crates/kraken" }
 
 anyhow = "1"
 csv = "1.3"
+rust_xlsxwriter = { version = "0.81", features = ["serde"] }
+quick-xml = "0.37"
 clap = { version = "4.5", features = ["cargo", "env"] }
 chrono = { version = "0.4" }
 serde = { version = "1", features = ["derive"] }
