rp2gen export first draft

--- a/crates/rp2gen/Cargo.toml
+++ b/crates/rp2gen/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 dungeon-ini = { workspace = true }
 dungeon-kraken = { workspace = true }
-dungeon-tax = { workspace = true }
+dungeon-tax = { workspace = true, features = ["xlsx"] }
 
 csv = { workspace = true }
 rust_xlsxwriter = { workspace = true }
